Update style.css absolute position

--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ div {
   background-repeat: no-repeat;
   background-position: center;
   overflow: hidden;
-  position: relative;
+  position: absolute;
   top: 50vh;
   left: 50vw;
   transform: translate(-50%, -50%);
